analizador2.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/

import nodos from "./nodos.js";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { programa: peg$parseprograma };
  var peg$startRuleFunction = peg$parseprograma;

  var peg$c0 = "=";
  var peg$c1 = ";";
  var peg$c2 = "var";
  var peg$c3 = "int";
  var peg$c4 = "float";
  var peg$c5 = "string";
  var peg$c6 = "boolean";
  var peg$c7 = "char";
  var peg$c8 = "void";
  var peg$c9 = "(";
  var peg$c10 = ")";
  var peg$c11 = "class";
  var peg$c12 = "{";
  var peg$c13 = "}";
  var peg$c14 = ",";
  var peg$c15 = "System.out.println(";
  var peg$c16 = "if";
  var peg$c17 = "else";
  var peg$c18 = "while";
  var peg$c19 = "for";
  var peg$c20 = "switch";
  var peg$c21 = "break";
  var peg$c22 = "continue";
  var peg$c23 = "return";
  var peg$c24 = "case";
  var peg$c25 = ":";
  var peg$c26 = "default";
  var peg$c27 = "&&";
  var peg$c28 = "||";
  var peg$c29 = "!=";
  var peg$c30 = "==";
  var peg$c31 = "<=";
  var peg$c32 = "<";
  var peg$c33 = ">=";
  var peg$c34 = ">";
  var peg$c35 = "-";
  var peg$c36 = "typeof";
  var peg$c37 = "!";
  var peg$c38 = ".";
  var peg$c39 = "'";
  var peg$c40 = "\"";
  var peg$c41 = "true";
  var peg$c42 = "false";
  var peg$c43 = "new";
  var peg$c44 = "//";
  var peg$c45 = "/*";
  var peg$c46 = "*/";

  var peg$r0 = /^[a-zA-Z]/;
  var peg$r1 = /^[a-zA-Z0-9]/;
  var peg$r2 = /^[+\-]/;
  var peg$r3 = /^[%*\/]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[^']/;
  var peg$r6 = /^[^"]/;
  var peg$r7 = /^[ \t\n\r]/;
  var peg$r8 = /^[\n]/;

  var peg$e0 = peg$literalExpectation("=", false);
  var peg$e1 = peg$literalExpectation(";", false);
  var peg$e2 = peg$literalExpectation("var", false);
  var peg$e3 = peg$literalExpectation("int", false);
  var peg$e4 = peg$literalExpectation("float", false);
  var peg$e5 = peg$literalExpectation("string", false);
  var peg$e6 = peg$literalExpectation("boolean", false);
  var peg$e7 = peg$literalExpectation("char", false);
  var peg$e8 = peg$literalExpectation("void", false);
  var peg$e9 = peg$literalExpectation("(", false);
  var peg$e10 = peg$literalExpectation(")", false);
  var peg$e11 = peg$literalExpectation("class", false);
  var peg$e12 = peg$literalExpectation("{", false);
  var peg$e13 = peg$literalExpectation("}", false);
  var peg$e14 = peg$literalExpectation(",", false);
  var peg$e15 = peg$literalExpectation("System.out.println(", false);
  var peg$e16 = peg$literalExpectation("if", false);
  var peg$e17 = peg$literalExpectation("else", false);
  var peg$e18 = peg$literalExpectation("while", false);
  var peg$e19 = peg$literalExpectation("for", false);
  var peg$e20 = peg$literalExpectation("switch", false);
  var peg$e21 = peg$literalExpectation("break", false);
  var peg$e22 = peg$literalExpectation("continue", false);
  var peg$e23 = peg$literalExpectation("return", false);
  var peg$e24 = peg$literalExpectation("case", false);
  var peg$e25 = peg$literalExpectation(":", false);
  var peg$e26 = peg$literalExpectation("default", false);
  var peg$e27 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e28 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e29 = peg$literalExpectation("&&", false);
  var peg$e30 = peg$literalExpectation("||", false);
  var peg$e31 = peg$literalExpectation("!=", false);
  var peg$e32 = peg$literalExpectation("==", false);
  var peg$e33 = peg$literalExpectation("<=", false);
  var peg$e34 = peg$literalExpectation("<", false);
  var peg$e35 = peg$literalExpectation(">=", false);
  var peg$e36 = peg$literalExpectation(">", false);
  var peg$e37 = peg$classExpectation(["+", "-"], false, false);
  var peg$e38 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e39 = peg$literalExpectation("-", false);
  var peg$e40 = peg$literalExpectation("typeof", false);
  var peg$e41 = peg$literalExpectation("!", false);
  var peg$e42 = peg$literalExpectation(".", false);
  var peg$e43 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e44 = peg$literalExpectation("'", false);
  var peg$e45 = peg$classExpectation(["'"], true, false);
  var peg$e46 = peg$literalExpectation("\"", false);
  var peg$e47 = peg$classExpectation(["\""], true, false);
  var peg$e48 = peg$literalExpectation("true", false);
  var peg$e49 = peg$literalExpectation("false", false);
  var peg$e50 = peg$literalExpectation("new", false);
  var peg$e51 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e52 = peg$literalExpectation("//", false);
  var peg$e53 = peg$classExpectation(["\n"], false, false);
  var peg$e54 = peg$anyExpectation();
  var peg$e55 = peg$literalExpectation("/*", false);
  var peg$e56 = peg$literalExpectation("*/", false);

  var peg$f0 = function(dcl) { return dcl };
  var peg$f1 = function(dcl) { return dcl };
  var peg$f2 = function(dcl) { return dcl };
  var peg$f3 = function(dcl) { return dcl };
  var peg$f4 = function(stmt) { return stmt };
  var peg$f5 = function(tipo, id, exp) {return exp};
  var peg$f6 = function(tipo, id, exp) { return crearNodo('declaracionVariable', { tipo, id, exp }) };
  var peg$f7 = function(id, exp) { return crearNodo('declaracionVariable', { id, exp }) };
  var peg$f8 = function(tipo, id, params, bloque) {return crearNodo('dclFunc', {id, params: params || [] , bloque, tipo})};
  var peg$f9 = function(id, dcls) { return crearNodo('dclClase', { id, dcls }) };
  var peg$f10 = function(dcl) { return dcl };
  var peg$f11 = function(dcl) { return dcl };
  var peg$f12 = function(id, ids) { return ids };
  var peg$f13 = function(id, params) { return [id, ...params] };
  var peg$f14 = function(tipo, id) { return crearNodo('param', { id, tipo }) };
  var peg$f15 = function(exp, exps) {return exps};
  var peg$f16 = function(exp, exps) { return crearNodo('print', {outputs: [exp, ...exps]}) };
  var peg$f17 = function(Bloque) { return Bloque };
  var peg$f18 = function(cond, stmtTrue, stmtFalse) { return stmtFalse };
  var peg$f19 = function(cond, stmtTrue, stmtFalse) { return crearNodo('if', { cond, stmtTrue, stmtFalse }) };
  var peg$f20 = function(cond, stmt) { return crearNodo('while', { cond, stmt }) };
  var peg$f21 = function(init, cond, inc, stmt) {
      return crearNodo('for', { init, cond, inc, stmt })
    };
  var peg$f22 = function(exp, cases, defa) { return crearNodo('switch', { exp, cases, defa }) };
  var peg$f23 = function() { return crearNodo('break') };
  var peg$f24 = function() { return crearNodo('continue') };
  var peg$f25 = function(exp) { return crearNodo('return', { exp }) };
  var peg$f26 = function(exp) { return crearNodo('expresionStmt', { exp }) };
  var peg$f27 = function(exp, stmt) {return stmt};
  var peg$f28 = function(exp, stmt) { return { exp, stmt } };
  var peg$f29 = function(stmt) {return stmt};
  var peg$f30 = function(stmt) { return stmt  };
  var peg$f31 = function(dcls) { return crearNodo('bloque', { dcls }) };
  var peg$f32 = function(dcl) { return dcl };
  var peg$f33 = function(exp) { return exp };
  var peg$f34 = function() { return null };
  var peg$f35 = function(tipo, id, id2, stmt) {return crearNodo('foreach', {tipo, id, id2, stmt})};
  var peg$f36 = function() { return text() };
  var peg$f37 = function(asignado, asgn) { 

    console.log({asignado})

    if (asignado instanceof nodos.ReferenciaVariable) {
      return crearNodo('asignacion', { id: asignado.id, asgn })
    }

    if (!(asignado instanceof nodos.Get)) {
      throw new Error('Solo se pueden asignar valores a propiedades de objetos')
    }
    
    return crearNodo('set', { objetivo: asignado.objetivo, propiedad: asignado.propiedad, valor: asgn })


  };
  var peg$f38 = function(izq, op, der) { return { tipo: op, der } };
  var peg$f39 = function(izq, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, der } = operacionActual
      return crearNodo('binaria', { op:tipo, izq: operacionAnterior, der })
    },
    izq
  )
};
  var peg$f40 = function(izq, op, der) { return { tipo: op, der } };
  var peg$f41 = function(izq, expansion) {
              return expansion.reduce(
                (operacionAnterior, operacionActual) => {
                  const { tipo, der } = operacionActual
                  return crearNodo('binaria', { op: tipo, izq: operacionAnterior, der })
                },
                izq
              )
            };
  var peg$f42 = function(izq, op, der) { return { tipo: op, der } };
  var peg$f43 = function(izq, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, der } = operacionActual
      return crearNodo('binaria', { op:tipo, izq: operacionAnterior, der })
    },
    izq
  )
};
  var peg$f44 = function(izq, op, der) { return { tipo: op, der } };
  var peg$f45 = function(izq, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, der } = operacionActual
      return crearNodo('binaria', { op:tipo, izq: operacionAnterior, der })
    },
    izq
  )
};
  var peg$f46 = function(izq, op, der) { return { tipo: op, der } };
  var peg$f47 = function(izq, expansion) {
    return expansion.reduce(
      (operacionAnterior, operacionActual) => {
        const { tipo, der } = operacionActual
        return crearNodo('binaria', { op:tipo, izq: operacionAnterior, der })
      },
      izq
    )
};
  var peg$f48 = function(num) { return crearNodo('unaria', { op: '-', exp: num }) };
  var peg$f49 = function(exp) { return crearNodo('unaria', {op: 'typeof', exp }) };
  var peg$f50 = function(num) { return crearNodo('unaria', { op: '!', num }) };
  var peg$f51 = function(objetivoInicial, args) { return {args, tipo: 'funcCall' } };
  var peg$f52 = function(objetivoInicial, id) { return { id, tipo: 'get' } };
  var peg$f53 = function(objetivoInicial, operaciones) {
  const op =  operaciones.reduce(
    (objetivo, args) => {
      // return crearNodo('llamada', { callee, args: args || [] })
      const { tipo, id, args:argumentos } = args

      if (tipo === 'funcCall') {
        return crearNodo('llamada', { callee: objetivo, args: argumentos || [] })
      }else if (tipo === 'get') {
        return crearNodo('get', { objetivo, propiedad: id })
      }
    },
    objetivoInicial
  )

  console.log('llamada', {op}, {text: text()});

return op
};
  var peg$f54 = function(arg, exp) { return exp };
  var peg$f55 = function(arg, args) { return [arg, ...args] };
  var peg$f56 = function() {return crearNodo('primitivo', { valor: parseFloat(text(), 10), tipo:'float' }) };
  var peg$f57 = function() {return crearNodo('primitivo', { valor: parseFloat(text(), 10), tipo:'int' }) };
  var peg$f58 = function(char) { return crearNodo('primitivo', { valor: char, tipo: 'char' }) };
  var peg$f59 = function(texto) { return crearNodo('primitivo', { valor: texto.join(''), tipo:'string' }) };
  var peg$f60 = function() { return crearNodo('primitivo', { valor: true, tipo:'boolean' }) };
  var peg$f61 = function() { return crearNodo('primitivo', { valor: false, tipo:'boolean' }) };
  var peg$f62 = function(exp) { return crearNodo('agrupacion', { exp }) };
  var peg$f63 = function(id, args) { return crearNodo('instancia', { id, args: args || [] }) };
  var peg$f64 = function(id) { return crearNodo('referenciaVariable', { id }) };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprograma() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseDeclaracion();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseDeclaracion();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseDeclaracion() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseClassDcl();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseVarDcl();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f2(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseFuncDcl();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f3(s1);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseStmt();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f4(s1);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseVarDcl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
